--- a/app/src/main/res/layout/create_request_checkbox_row.xml
+++ b/app/src/main/res/layout/create_request_checkbox_row.xml
@@ -7,11 +7,13 @@
 
 
     <CheckBox
-
         android:id="@+id/checkBoxRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="CheckBox"
+        android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
