--- a/app/src/main/res/layout/create_request_question_row.xml
+++ b/app/src/main/res/layout/create_request_question_row.xml
@@ -2,24 +2,28 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/questionRowText"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
+        app:layout_constraintBottom_toTopOf="@id/questionRowTIL"
         app:layout_constraintEnd_toStartOf="@id/questionRowSpinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
+        android:theme="@style/SpinnerTheme"
         android:id="@+id/questionRowSpinner"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/questionRowTIL"
+        app:layout_constraintBottom_toTopOf="@id/questionRowTIL"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/questionRowText"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,15 +33,20 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/questionRowSpinner"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/questionRowText"
+        android:visibility="visible"
+        android:backgroundTint="@color/secondary">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/questionRowET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="hint"
+            android:textSize="14sp"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColorHint="@color/secondary"
+            android:textColor="@color/sDark"
+            android:hint="@string/other"
            />
     </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
