--- a/app/src/main/res/layout/activity_in_need.xml
+++ b/app/src/main/res/layout/activity_in_need.xml
@@ -26,7 +26,8 @@
         app:menu="@menu/inneed_nav_menu"
         app:itemTextColor="@color/bottom_nav_color"
         app:itemIconTint="@color/bottom_nav_color"
-        android:background="@color/primary"
-        android:theme="@style/BottomNav"/>
+        android:background="@drawable/bottom_navigation_view_bg"
+        android:theme="@style/BottomNav"
+        android:padding="10dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
