--- a/app/src/main/res/layout/activity_volunteer.xml
+++ b/app/src/main/res/layout/activity_volunteer.xml
@@ -27,7 +27,8 @@
         app:menu="@menu/volunteer_nav_menu"
         app:itemTextColor="@color/bottom_nav_color"
         app:itemIconTint="@color/bottom_nav_color"
-        android:background="@color/primary"
+        android:background="@drawable/bottom_navigation_view_bg"
         android:theme="@style/BottomNav"
+        android:padding="10dp"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
