--- a/app/src/main/res/menu/inneed_nav_menu.xml
+++ b/app/src/main/res/menu/inneed_nav_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="Moje zgłoszenia"
+        android:title="Moje"
         android:id="@+id/myRequestsFragment"
         android:icon="@drawable/ic_baseline_format_list_bulleted_24"
         />
     <item
-        android:title="Dodaj zgłoszenie"
+        android:title="Dodaj"
         android:id="@+id/createRequestFragment"
         android:icon="@drawable/ic_baseline_add_24"
         />
