Bottom navigation overlaping bug has been fixed

--- a/app/src/main/res/layout/fragment_accepted_requests.xml
+++ b/app/src/main/res/layout/fragment_accepted_requests.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.AcceptedRequestsFragment"
-    android:layout_marginBottom="?attr/actionBarSize">
+    android:layout_marginBottom="@dimen/bottomNavigationViewSize">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/acceptedRequestsRecycler"
