--- a/app/src/main/res/layout/fragment_create_request.xml
+++ b/app/src/main/res/layout/fragment_create_request.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:layout_editor_absoluteX="1dp"
     tools:layout_editor_absoluteY="1dp"
-    android:layout_marginBottom="?attr/actionBarSize">
+    android:layout_marginBottom="@dimen/bottomNavigationViewSize">
 
 
     <LinearLayout
