--- a/app/src/main/res/layout/fragment_search_request.xml
+++ b/app/src/main/res/layout/fragment_search_request.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SearchRequestFragment">
+    tools:context=".fragment.SearchRequestFragment"
+    android:layout_marginBottom="@dimen/bottomNavigationViewSize">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="?attr/actionBarSize">
+        android:layout_height="match_parent">
 
 
         <com.google.android.gms.maps.MapView
