Graphics for empty list have been added; TextViews in shopping list have been redesigned

--- a/app/src/main/res/layout/fragment_account_reputation.xml
+++ b/app/src/main/res/layout/fragment_account_reputation.xml
@@ -75,8 +75,15 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <ImageView
+        android:id="@+id/emptyImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:src="@drawable/empty_opinion"
+        android:visibility="gone" />
 
-
+s
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reputationOpinionRecycler"
         android:layout_width="match_parent"
