--- a/app/src/main/res/layout/fragment_accepted_requests.xml
+++ b/app/src/main/res/layout/fragment_accepted_requests.xml
@@ -7,6 +7,18 @@
     tools:context=".fragment.AcceptedRequestsFragment"
     android:layout_marginBottom="@dimen/bottomNavigationViewSize">
 
+    <ImageView
+        android:id="@+id/emptyImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:src="@drawable/empty_request"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/acceptedRequestsRecycler"
         android:layout_width="match_parent"
