--- a/app/src/main/res/layout/fragment_accepted_requests.xml
+++ b/app/src/main/res/layout/fragment_accepted_requests.xml
@@ -8,7 +8,7 @@
     android:layout_marginBottom="@dimen/bottomNavigationViewSize">
 
     <ImageView
-        android:id="@+id/emptyImage"
+        android:id="@+id/emptyImageAC"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
