--- a/app/src/main/res/navigation/volunteer_nav_graph.xml
+++ b/app/src/main/res/navigation/volunteer_nav_graph.xml
@@ -59,6 +59,13 @@
             app:exitAnim="@anim/from_right"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/from_right" />
+        <action
+            android:id="@+id/action_searchRequestFragment2_to_accountFragment2"
+            app:destination="@id/accountFragment2"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/from_right"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/from_right" />
     </fragment>
     <fragment
         android:id="@+id/requestDetails"
